// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.priv";
option java_outer_classname = "PrivProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service Priv {
  rpc getPrivList (PrivListRequest) returns (PrivListResponse) {}
  rpc addPriv (AddPrivRequest) returns (PrivSchema) {}
  rpc deletePriv (DeleteRequest) returns (DeleteResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message PrivListRequest {
  string clientCode = 1;
}

message PrivListResponse {
  repeated PrivSchema privs = 1;
}

message AddPrivRequest {
  OperatorSchema curUserInfo = 1;
  PrivSchema priv = 2;
}

message DeleteRequest {
  OperatorSchema curUserInfo = 1;
  string modulePrivCode = 2;
}

message DeleteResponse {
  bool deleted = 1;
}

message OperatorSchema {
  string userCode = 1;
  string realName = 2;
}

message PrivSchema {
  string modulePrivCode = 1;
  string modulePrivName = 2;
  int32 status = 3;
  uint32 authType = 4;
  string clientCode = 5;
  string privVerb = 6;
  string moduleCode = 7;
  string moduleName = 8;
}